refactor: :recycle: Change endpoint of itmes apis to /itmes
